# yato

./: Cargo.toml  README.md
src/: args.rs  config.rs  discord_rpc.rs  local_save.rs  main.rs  mpvipc.rs  player.rs
src/api/: aniskip.rs
src/api/anilist/: fetch.rs
