[package]
name = "yato"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.35"
console = "0.15.11"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
discord-rpc-client = "0.4.0"
futures = "0.3.31"
futures-core = "0.3.31"
fuzzy-matcher = "0.3.7"
log = "0.4.27"
m3u8-rs = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
simplelog = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
